@@ -1,7 +1,0 @@
-<?php
-
-$extensionPath = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath('debug_mysql_db');
-return array(
-	'DatabaseConnection' => $extensionPath . 'Classes/Database/DatabaseConnection.php'
-);
-
